# haskell-api

./: .gitignore  README.md  haskell-api.cabal  haskellApi.cabal
app/: Main.hs
scripts/: build.sh
src/: Main.hs  MainOrig.hs  Users.hs  WebApp.hs
test/: UsersSpec.hs
test/Data/String/: StripSpec.hs
