name:                haskell-api
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/mikegehard/haskell-api#readme
license:             MIT
license-file:        LICENSE
author:              Mike Gehard
maintainer:          mike.gehard@gmail.com
copyright:           2016 Mike Gehard
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable haskell-api
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
