name:                haskellApi
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/mikegehard/haskell-api#readme
license:             MIT
license-file:        LICENSE
author:              Mike Gehard
maintainer:          mike.gehard@gmail.com
copyright:           2016 Mike Gehard
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     WebApp,
                       Users
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       aeson,
                       scotty

executable haskellApi
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       haskellApi,
                       scotty,
                       wai-extra
                       

test-suite haskellApi-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskellApi
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
